@@ -62,10 +62,8 @@ git clone git@github.com:aurusov/raox.git
 >**[!]** *If your output differs from the one above by a lot of errors mentioning* `RULE_ANY_OTHER`*, you should run the generation process again and again until the bulid is succesfull. This is Xtext/Antlr bug caused by complex rules supporting unicode identifiers in grammar, sorry for the inconvenience*
 
 * `Run` `>` `Run Configurations...` `>` `Eclipse Application` `>` `New` `>` `Name` `=`
- * `runtime-EclipseXtext`<br>`>` `Location` `=`
- * `${workspace_loc}/../runtime-EclipseXtext`<br>`>` `Run`
- * *Ignore this if you use Java version 8 or later.* Eclipse Platform may freeze during its launch. This happens due to the unsufficient [permgen](http://wiki.eclipse.org/FAQ_How_do_I_increase_the_permgen_size_available_to_Eclipse%3F) size available to Eclipse. To prevent that, add `-XX:MaxPermSize=256M` to VM arguments in Run Configuration.
-* And that's it.
+ * `raox`
+* `Run`
 
 ## Running
 * `Window` `>` `Open Perspective` `>` `Other...` `>` `Rao`
